welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:5: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Boolean
    return Nil
           ^